# tungstenkit

./: .env  .gitignore  LICENSE  README.md  pyproject.toml
examples/blur-basic/: tungsten_model.py
examples/blur-complex/: README.md  tungsten_model.py
frontend/: .env.development  .eslintrc.json  .prettierrc.json  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/src/: axios.ts  axios.tsx  types.ts  utils.tsx
frontend/src/api/: error.types.ts  file.ts  file.types.ts  model.ts  prediction.ts  prediction.types.ts
frontend/src/contexts/: prediction-input-form-context.tsx
frontend/src/enums/: project.ts
frontend/src/pages/: 404.tsx  500.tsx  _app.tsx  index.tsx
frontend/src/redux/: singleModelSlice.ts  store.ts
frontend/src/styles/: App.css  fileStyles.ts  loading-dots.module.css  mantine-theme.ts  markdown-styles.module.css  mui-theme.ts  no-content.ts  syntaxHighlighter.ts
frontend/src/types/: index.ts
frontend/src/utils/: avatar.ts  bytesize.ts  datetime.ts  getGithubUrl.tsx  number.ts  prediction.ts  project-utils.ts  serialize.ts  string.ts  tag.ts  urls.ts  validators.ts
scripts/: include_frontend.py  install.py  update_build_metadata.py  write_tungstenkit_metadata.py
tests/python/: conftest.py  dummy_model.py  dummy_model_fixtures.py  mock_docker_client.py  test_blob_store.py  test_io_schema.py  test_json_store.py  test_model_def.py  test_model_def_loader.py
tests/python/.tungsten-build-emdmwik7/: Dockerfile.dockerignore
tests/python/.tungsten-build-jp3ychgh/: Dockerfile  Dockerfile.dockerignore
tests/python/containerize/: fixtures.py  test_build_dockerfile_template_args.py  test_construct_build_context.py  test_dockerfile_templates.py  test_infer_versions.py
tests/python/containers/: fixtures.py
tests/python/demo_server/: fixtures.py  test_http_requests.py
tests/python/dummy_model_data/: markdown.md
tests/python/model_server/: fixtures.py  setup_failure_model.py  test_http_requests.py  test_input_queues.py  test_pred_worker_executor.py  test_pred_workers.py  test_result_caches.py
tests/python/storables/: fixtures.py  test_markdown.py  test_model_data.py  test_source_file.py
tests/python/tungsten_clients/: fixtures.py  patches.py  test_tungsten_client.py
tests/python/utils/: test_docker.py
tungstenkit/: __init__.py  exceptions.py
tungstenkit/_internal/: _model_def_new_gen.py  blob_store.py  configs.py  constants.py  container_metadata_store.py  io.py  io_schema.py  json_store.py  logging.py  model_def.py  model_def_loader.py  model_store.py
tungstenkit/_internal/cli/: callbacks.py  login_command.py  main.py  model_commands.py  project_commands.py
tungstenkit/_internal/containerize/: __init__.py  build_context.py  containerize_model.py  model.py
tungstenkit/_internal/containers/: __init__.py  model.py  model_container.py
tungstenkit/_internal/demo_server/: __init__.py  model_validation.py  schemas.py  server.py
(+316 files in other folders)
