[tool.poetry]
name = "tungstenkit"
version = "0.1.3"
description = "ML container made simple"
authors = ["Tungsten Contributors <foss@tungsten-ai.com>"]
homepage = "https://github.com/tungsten-ai/tungstenkit"
readme = ["README.md"]
packages = [{include = "tungstenkit"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: User Interfaces",
    "Typing :: Typed",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Environment :: GPU",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 1",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
    ]

[tool.poetry.scripts]
tungsten = "tungstenkit._internal.cli.main:main"

[tool.poetry.dependencies]
python = "^3.7"
attrs = "^22.1.0"
cattrs = "^22.1.0"
pyyaml = "^5.4"
pathspec = "^0.10.2"
loguru = ">=0.6.0, <1.0.0"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
jinja2 = "^3.1.2"
pydantic = "^1.10.2"
typing-extensions = "^4.4.0"
pillow = ">=5.2.0"
fastapi = ">=0.88.0, <1.0.0"
uvicorn = ">=0.17.6, <1.0.0"
tabulate = "^0.9.0"
markdown = "^3.4.1"
filelock = "^3.9.0"
rich = "^13.3.1"
w3lib = "^2.1.1"
markdownify = "^0.11.6"
docker = "^6.0.1"
fasteners = "^0.18"
furl = "^2.1.3"
requests-toolbelt = "^0.10.1"
binaryornot = "^0.4.4"
python-multipart = "^0.0.6"
urllib3 = "^1.26"
dill = "^0.3.6"
pynvml = "^11.5.0"
platformdirs = "^3.8.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.1"
black = "^22.3.0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^7.1.3"
pytest-cov = "^2.8.1"
types-pyyaml = "^5.4"
types-requests = "^2.28.11.5"
types-setuptools = "^65.6.0.2"
twine = "^4.0.2"
locust = "^2.14.2"
types-tabulate = "^0.9.0.0"
types-markdown = "^3.4.2.5"
pytest-timeout = "^2.1.0"
jsonschema = "^4.17.3"
responses = "^0.23.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 99

[tool.black]
line-length = 99

[build-system]
requires = ["poetry>=1.2"]
build-backend = "poetry.masonry.api"
